objects/maps__AdvRoutePriority__c.object
<CustomObject>
    <description>These hold the criteria for bucketing objects into specific Advanced Route priorities when routing</description>
    <fields>
        <fullName>maps__AdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Advanced Route template that the priority is associated with</description>
        <label>Maps Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Priorities</relationshipLabel>
        <relationshipName>AdvRoutePriorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__IsBasePriority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will tell us if the priority is from the base filter or not</description>
        <label>Base Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LogicOrderOfOperations__c</fullName>
        <description>This is the order of operations for the priority filters</description>
        <label>Logic Order of Operations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PriorityFilters__c</fullName>
        <description>These are the filters used in the priority query</description>
        <label>Priority Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__PriorityObject__c</fullName>
        <description>This is the object the priority will check</description>
        <label>Priority Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PriorityQuery__c</fullName>
        <description>This is the query for the priority</description>
        <label>Priority Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Priority__c</fullName>
        <description>This is the priority</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__RelatedAdvRouteTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is populated if the waypoint is associated to an additional base object for a template</description>
        <label>Related Advanced Route Template</label>
        <referenceTo>maps__AdvRouteTemplate__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Priorities (Related Template)</relationshipLabel>
        <relationshipName>RelatedAdvRoutePriorities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Advanced Route Priority</label>
    <nameField>
        <label>Maps Advanced Route Priority Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Route Priorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>